tests/baselines/reference/reexportMissingDefault4.errors.txt
tests/cases/compiler/a.ts(2,10): error TS2305: Module '"./b"' has no exported member 'default'.


==== tests/cases/compiler/b.d.ts (0 errors) ====
    declare var b: number;
    export { b };
    
==== tests/cases/compiler/a.ts (1 errors) ====
    export { b } from "./b";
    export { default } from "./b";
             ~~~~~~~
!!! error TS2305: Module '"./b"' has no exported member 'default'.